# api_service/app/docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/files/drawings": {
+        "/files/drawings/{backet}": {
             "post": {
                 "security": [
                     {
@@ -28,6 +28,13 @@
                 ],
                 "summary": "Create Drawing",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "backet",
+                        "name": "backet",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "group image",
                         "name": "group",
@@ -101,14 +108,21 @@
                         "type": "string",
                         "description": "drawing id",
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "drawing group",
                         "name": "group",
-                        "in": "query",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "backet",
+                        "name": "backet",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -174,14 +188,21 @@
                         "type": "string",
                         "description": "drawing id",
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "drawing group",
                         "name": "group",
-                        "in": "query",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "backet",
+                        "name": "backet",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -6553,37 +6574,37 @@
         "proto.SizeInt": {
             "type": "object",
             "properties": {
-                "D": {
-                    "type": "string"
-                },
-                "D1": {
-                    "type": "string"
-                },
-                "D2": {
-                    "type": "string"
-                },
-                "Dy": {
-                    "type": "string"
-                },
-                "H1": {
-                    "type": "string"
-                },
-                "H2": {
-                    "type": "string"
-                },
-                "Py": {
-                    "type": "string"
-                },
                 "bolt": {
                     "type": "string"
                 },
                 "countBolt": {
                     "type": "integer"
                 },
+                "d": {
+                    "type": "string"
+                },
+                "d1": {
+                    "type": "string"
+                },
+                "d2": {
+                    "type": "string"
+                },
                 "dUp": {
                     "type": "string"
                 },
+                "dy": {
+                    "type": "string"
+                },
+                "h1": {
+                    "type": "string"
+                },
+                "h2": {
+                    "type": "string"
+                },
                 "id": {
+                    "type": "string"
+                },
+                "py": {
                     "type": "string"
                 }
             }
